--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^10.3",
-        "phpmd/phpmd": "^2.13"
+        "phpmd/phpmd": "^2.13",
+        "phpstan/phpstan": "^1.10",
+        "friendsofphp/php-cs-fixer": "^3.26"
     }
 }
