--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "proect",
     "require": {
         "jwread/lib-allure": "^8.1",
-        "folha/lightopenid": "^1.0"
+        "folha/lightopenid": "^1.0",
+        "cebe/markdown": "~1.2.0"
     },
     "autoload": {
         "psr-4": {
